# camply

./: .envrc  .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  .releaserc.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yaml  adhoc_equipment_analysis.ipynb  check-yellowstone.sh  check_yellowstone.py  check_yellowstone.sh  docker-compose.yaml  docker-entrypoint.sh  example.camply  example.env  example.yellowstone-camping.env  example_search.yaml  mkdocs.yml  pyproject.toml  recreation_gov_api.ipynb  requirements.txt  setup.cfg  setup.py  tox.ini
.claude/: settings.local.json
.github/: FUNDING.yaml  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  labels.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  config.yml  feature_request.md
.github/config/: .eslintrc.js  yamllint.yml
.github/helpers/: version_check.py
.github/matchers/: eslint.json  mypy.json
.github/semantic_release/: package-lock.json  package.json  release_notes.hbs  set_version.sh
.github/workflows/: camply-publishing.yml  codeql-analysis.yml  docker-image-ci.yml  docker.yaml  docker.yml  docs.yaml  docs.yml  labeler.yaml  lint.yaml  lint.yml  matrix.yml  publish.yaml  publish.yml  pylint.yaml  pylint.yml  pytest.yaml  pytest.yml  python-packages.yaml  release.yaml  release.yml  test.yaml  tests.yaml  tests.yml  version_checker.yaml  version_checker.yml
backend/: .dockerignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/camply_backend/: __about__.py  __init__.py  app.py
backend/camply_web/: app.py
backend/config/: gunicorn.conf.py
backend/tests/: conftest.py
backend/tests/routers/: test_health.py
camply/: __init__.py  __main__.py  _cli.py  _version.py  camping_search.py  cli.py  containers.py  exceptions.py
camply/.github/workflows/: python-packages.yaml
camply/config/: __init__.py  api_config.py  cli_config.py  data_columns.py  file_config.py  logging_config.py  national_parks.py  notification_config.py  search_config.py  yellowstone.py  yellowstone_config.py
camply/containers/: __init__.py  api_responses.py  base_container.py  data_containers.py  examples.py  goingtocamp.py  gtc_api_responses.py  reserve_california.py  search_model.py  usedirect.py
camply/notifications/: __init__.py  apprise.py  base_notifications.py  discord.py  email_notifications.py  multi_provider_notifications.py  pushbullet.py  pushover.py  silent_notifications.py  slack.py  telegram.py  twilio.py  webhook.py
camply/providers/: __init__.py  base_provider.py  provider_base.py
camply/providers/going_to_camp/: __init__.py  going_to_camp_provider.py  rec_areas.py
camply/search/: __init__.py  base_search.py  camping_search.py  search_going_to_camp.py  search_recreationdotgov.py  search_reserve_california.py  search_reserveamerica.py  search_usedirect.py  search_yellowstone.py  yaml_search.py
camply/utils/: __init__.py  api_utils.py  camply_cli.py  configure_camply.py  general_utils.py  logging_utils.py  notifications.py  recreations_cli.py  yaml_utils.py
campsite_searches/: template.yaml
cli/: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  requirements.txt
cli/.github/: release-drafter.yaml
cli/docs/: how_to_run.md  providers.md  python.md  yaml_search.json
cli/requirements/: requirements-all.py3.10.txt  requirements-all.py3.12.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-docs.txt  requirements-test.txt
cli/tests/: __init__.py  conftest.py  debug_camply.py  test_notifications.py
docs/: Makefile  README.docker.md  README.md  README_DOCKER.md  cli.md  command_line_usage.md  contributing.md  dependencies.md  docker.md  gen_ref_pages.py  how_to_run.md  index.md  installation.md  providers.md  recreationdotgov.md  requirements.txt  yaml_search.json
docs/examples/: docker-compose.yaml  docker-compose.yml  example.camply  example_search.yaml  example_search.yml
docs/source/: cli.md  cli.rst  conf.py  contributing.md  index.md  index.rst  usage.md
examples/: template.yaml
frontend/: .dockerignore  Dockerfile  Taskfile.yaml  docker-compose.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
jupyter_notebooks/: camply_examples.ipynb
requirements/: dev-requirements.txt  dev.txt  prod-requirements.txt  prod.txt  requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-dev.txt  requirements-docs.txt  requirements-lint.txt  requirements-prod.txt  requirements-test.txt
scripts/: camply-cli.sh  check-recreationdotgov.sh  check-yellowstone.sh  docker-entrypoint.sh  docker-helper.sh  find_availabilities.py  find_rec_dot_gov.py  find_recreationdotgov.py  find_recreationdotgov_yaml.py  find_yellowstone.py
src/camply_web/: __about__.py  __init__.py  app.py
tests/: command_line_test.sh  conftest.py  debug_camply.py  pytest.ini  test_cli.py
tests/cassettes/: test_pushover_campsite.yaml  test_pushover_message.yaml
tests/cli/: test_campgrounds.py  test_campsites.py  test_going_to_camp.py  test_list_campsites.py  test_main.py  test_recreation_areas.py  test_tours_and_timed_entry.py  test_usedirect.py
tests/routers/: test_health.py
tests/search_providers/: test_goingtocamp_search.py  test_recdotgov_search.py  test_reserve_california.py  test_yellowstone_search.py
tests/yaml/: equipment_scenario_1.yaml  example_campsite_search.yaml  example_search.yaml  goingtocamp.yaml  lowercase_search.yaml  misspelled_search.yaml  weekday_search.yaml
tests/yml/: example_campsite_search.yml  example_search.yml  example_yellowstone_search.yml
yellowstone_availability/: __init__.py  check_yellowstone.py  notifications.py
yellowstone_availability/config/: __init__.py  pushover.py  yellowstone.py
(+259 files in other folders)
