[project]
name = "camply-web"
version = "0.1.0"
description = "A full-stack application to help you find campsites at sold-out campgrounds"
readme = "README.md"
authors = [
  {name = "Justin Flannery", email = "justin.flannery@juftin.com"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
  "fastapi>=0.115.12",
  "gunicorn>=23.0.0",
  "importlib-metadata>=6.5.0; python_version < '3.10'",
  "orjson>=3.10.16",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "uvicorn-worker>=0.3.0",
  "uvicorn[standard]>=0.34.0"
]

[project.scripts]
camply-web-debug = "camply_web.app:main"

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.2",
  "mypy>=1.15.0",  # mypy --install-types
  "pip>=24.3.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v --cov=src/camply_web --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long
  "PLR0913",  # Too many arguments to function call
  "PLW2901",  # Outer for loop variable overwritten by inner assignment target
  "RUF012"  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "Q",  # flake8-quotes
  "B",  # flake8-bugbear
  "PLE",  # pylint
  "PLR",  # pylint
  "PLW",  # pylint
  "RUF",  # ruff
  "C90"  # mccabe
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["camply_web"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
