[metadata]
name = camply
version = attr: camply._version.__version__
author = Justin Flannery
author_email = juftin@juftin.com
maintainer = Justin Flannery
maintainer_email = juftin@juftin.com
description = camply, the campsite finder ðŸ•
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/juftin/camply
project_urls =
    Bug Tracker = https://github.com/juftin/camply/issues
    Documentation = https://github.com/juftin/camply/blob/main/README.md
    Changelog = https://github.com/juftin/camply/blob/main/CHANGELOG.md
    Docker = https://hub.docker.com/r/juftin/camply
    Discussions = https://github.com/juftin/camply/discussions
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    notifications
    python
    recreation
    outdoors
    camping
    reservations
    national-parks
    yellowstone

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    tox
    pytest
    coverage
    pytest-vcr
    flake8

[options.entry_points]
console_scripts =
    camply = camply.utils.camply_cli:main
