[project]
name = "camply-backend"
version = "0.2.0"
description = "A full-stack application to help you find campsites at sold-out campgrounds"
requires-python = ">=3.9,<4.0"
dependencies = ["backend", "db"]

[tool.uv.sources]
backend = {workspace = true}
db = {workspace = true}

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long
  "PLR0913",  # Too many arguments to function call
  "PLW2901",  # Outer for loop variable overwritten by inner assignment target
  "RUF012"  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "Q",  # flake8-quotes
  "B",  # flake8-bugbear
  "PLE",  # pylint
  "PLR",  # pylint
  "PLW",  # pylint
  "RUF",  # ruff
  "C90"  # mccabe
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["camply_backend"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"**/tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
